[tool.poetry]
name = "databasecomparision"
version = "0.1.0"
description = ""
authors = ["bkolej <bkolej@egnyte.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.1"
mysql-connector-python = "^8.2.0"
python-dotenv = "^1.0.0"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
pymysql = "^1.1.1"
cryptography = "^44.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
